--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,66 @@
-#square {
-	width: 200px;
-	height: 200px;
-	background-color: red;
-	cursor: pointer;
+
+main {
+	text-align: center;
 }
 
+h1 {
+	margin-top: 50px;
+	font-size: 2em;
+	text-align: center;
+}
+
+#gameBoard {
+	border: solid 3px black;
+	display: inline-block;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+#row-1, #row-2, #row-3 {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+#row-1 {
+	margin-top: 10px;
+}
+
+#row-3 {
+	margin-bottom: 10px;
+}
+
+.square {
+	width: 100px;
+	height: 100px;
+	margin: 10px;
+	cursor: pointer;
+	float: left;
+	background-color: black;
+}
+
+.selected {
+	pointer-events: none;
+}
+
+.player1 {
+	background-color: white;
+	background-image: url(../images/rebels.svg);
+	background-size: cover;
+}
+
+.player2 {
+	background-color: white;
+	background-image: url(../images/empire.svg);
+	background-size: cover;
+}
+
+.reset {
+	width: 20%;
+	margin: 0 auto;
+	font-size: 1.5em;
+	border: solid 1px black;
+	padding: 5px;
+}
 
 
 /* Apply a natural box layout model to all elements, but allowing components to change */
