--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+body {
+	font-family: 'Play', sans-serif;
+}
 
 main {
 	text-align: center;
@@ -5,7 +8,7 @@ main {
 
 h1 {
 	margin-top: 50px;
-	font-size: 2em;
+	font-size: 4em;
 	text-align: center;
 }
 
@@ -14,7 +17,7 @@ h1 {
 	display: inline-block;
 	margin-top: 50px;
 	margin-bottom: 50px;
-	border-radius: 10px;
+	border-radius: 0 20px;
 }
 
 #row-1, #row-2, #row-3 {
@@ -36,7 +39,8 @@ h1 {
 	margin: 10px;
 	cursor: pointer;
 	float: left;
-	background-color: black;
+	border: solid 1px black;
+	border-radius: 10px 0;
 }
 
 .selected {
@@ -55,6 +59,10 @@ h1 {
 	background-size: cover;
 }
 
+.win {
+	background-color: lime;
+}
+
 .reset {
 	width: 20%;
 	margin: 0 auto;
@@ -62,11 +70,11 @@ h1 {
 	border: solid 1px black;
 	padding: 10px;
 	cursor: pointer;
-	border-radius: 10px;
+	border-radius: 10px 0;
 }
 
 .reset:hover {
-	background-color: lime;
+	background-color: gray;
 }
 
 
