--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,13 @@ body {
 	font-family: 'Play', sans-serif;
 }
 
-main {
+main, h1 {
 	text-align: center;
 }
 
 h1 {
 	margin-top: 50px;
 	font-size: 4em;
-	text-align: center;
 }
 
 #gameBoard {
@@ -33,30 +32,38 @@ h1 {
 	margin-bottom: 10px;
 }
 
+.square, .reset {
+	cursor: pointer;
+	border: solid 1px black;
+	border-radius: 10px 0;
+}
+
 .square {
 	width: 100px;
 	height: 100px;
 	margin: 10px;
-	cursor: pointer;
 	float: left;
-	border: solid 1px black;
-	border-radius: 10px 0;
+}
+
+.square:hover {
+	border: solid 2px red;
 }
 
 .selected {
 	pointer-events: none;
 }
 
-.player1 {
+.player1, .player2 {
 	background-color: white;
-	background-image: url(../images/rebels.svg);
 	background-size: cover;
 }
 
+.player1 {
+	background-image: url(../images/rebels.svg);
+}
+
 .player2 {
-	background-color: white;
 	background-image: url(../images/empire.svg);
-	background-size: cover;
 }
 
 .win {
@@ -67,10 +74,7 @@ h1 {
 	width: 20%;
 	margin: 0 auto;
 	font-size: 1.5em;
-	border: solid 1px black;
 	padding: 10px;
-	cursor: pointer;
-	border-radius: 10px 0;
 }
 
 .reset:hover {
